--- a/project/style.css
+++ b/project/style.css
@@ -22,7 +22,7 @@ body {
     line-height: 1.6;
     color: var(--dark-color);
     background-color: var(--white-color);
-    background-image: url('../images/background.jpg');
+    background-image: url('../project/images/background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
